--- a/infoWindow_dockwidget.ui
+++ b/infoWindow_dockwidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>354</width>
-    <height>641</height>
+    <width>350</width>
+    <height>590</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,15 +18,15 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>354</width>
-    <height>640</height>
+    <width>350</width>
+    <height>590</height>
    </size>
   </property>
   <property name="floating">
    <bool>true</bool>
   </property>
   <property name="windowTitle">
-   <string>infoWindow</string>
+   <string>tds2qgis</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <widget class="QGroupBox" name="dateRange">
@@ -35,10 +35,10 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>170</y>
-      <width>291</width>
-      <height>71</height>
+      <x>10</x>
+      <y>140</y>
+      <width>331</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="title">
@@ -49,104 +49,45 @@
       <rect>
        <x>10</x>
        <y>30</y>
-       <width>131</width>
+       <width>151</width>
        <height>22</height>
       </rect>
+     </property>
+     <property name="displayFormat">
+      <string>yyyy-MM-dd hh:mm:ss</string>
      </property>
     </widget>
     <widget class="QDateTimeEdit" name="maxDateTime">
      <property name="geometry">
       <rect>
-       <x>150</x>
+       <x>170</x>
        <y>30</y>
-       <width>131</width>
+       <width>151</width>
        <height>22</height>
       </rect>
      </property>
-    </widget>
-    <widget class="QLabel" name="label_8">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>50</y>
-       <width>31</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>min</string>
+     <property name="displayFormat">
+      <string>yyyy-MM-dd hh:mm:ss</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_9">
-     <property name="geometry">
-      <rect>
-       <x>150</x>
-       <y>50</y>
-       <width>31</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>max</string>
-     </property>
-    </widget>
-   </widget>
-   <widget class="QCheckBox" name="checkBox">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>250</y>
-      <width>161</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Use the screen coords</string>
-    </property>
    </widget>
    <widget class="QGroupBox" name="lonRange">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>280</y>
-      <width>171</width>
-      <height>71</height>
+      <y>210</y>
+      <width>231</width>
+      <height>121</height>
      </rect>
     </property>
     <property name="title">
-     <string>Longitude</string>
+     <string>Region</string>
     </property>
-    <widget class="QLabel" name="label_4">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>50</y>
-       <width>31</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>min</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_5">
-     <property name="geometry">
-      <rect>
-       <x>90</x>
-       <y>50</y>
-       <width>31</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>max</string>
-     </property>
-    </widget>
     <widget class="QDoubleSpinBox" name="minLongitudeBox">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>30</y>
+       <y>60</y>
        <width>71</width>
        <height>22</height>
       </rect>
@@ -173,11 +114,39 @@
       <double>180.000000000000000</double>
      </property>
     </widget>
+    <widget class="QDoubleSpinBox" name="minLatitudeBox">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>90</y>
+       <width>71</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="inputMethodHints">
+      <set>Qt::ImhNone</set>
+     </property>
+     <property name="frame">
+      <bool>false</bool>
+     </property>
+     <property name="buttonSymbols">
+      <enum>QAbstractSpinBox::UpDownArrows</enum>
+     </property>
+     <property name="decimals">
+      <number>4</number>
+     </property>
+     <property name="minimum">
+      <double>-90.000000000000000</double>
+     </property>
+     <property name="maximum">
+      <double>90.000000000000000</double>
+     </property>
+    </widget>
     <widget class="QDoubleSpinBox" name="maxLongitudeBox">
      <property name="geometry">
       <rect>
-       <x>90</x>
-       <y>30</y>
+       <x>150</x>
+       <y>60</y>
        <width>71</width>
        <height>22</height>
       </rect>
@@ -201,77 +170,10 @@
       <double>180.000000000000000</double>
      </property>
     </widget>
-   </widget>
-   <widget class="QGroupBox" name="latRange">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>350</y>
-      <width>171</width>
-      <height>71</height>
-     </rect>
-    </property>
-    <property name="title">
-     <string>Latitude</string>
-    </property>
-    <widget class="QLabel" name="label_2">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>50</y>
-       <width>31</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>min</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_3">
-     <property name="geometry">
-      <rect>
-       <x>90</x>
-       <y>50</y>
-       <width>31</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>max</string>
-     </property>
-    </widget>
-    <widget class="QDoubleSpinBox" name="minLatitudeBox">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>30</y>
-       <width>71</width>
-       <height>22</height>
-      </rect>
-     </property>
-     <property name="inputMethodHints">
-      <set>Qt::ImhNone</set>
-     </property>
-     <property name="frame">
-      <bool>false</bool>
-     </property>
-     <property name="buttonSymbols">
-      <enum>QAbstractSpinBox::UpDownArrows</enum>
-     </property>
-     <property name="decimals">
-      <number>4</number>
-     </property>
-     <property name="minimum">
-      <double>-90.000000000000000</double>
-     </property>
-     <property name="maximum">
-      <double>90.000000000000000</double>
-     </property>
-    </widget>
     <widget class="QDoubleSpinBox" name="maxLatitudeBox">
      <property name="geometry">
       <rect>
-       <x>90</x>
+       <x>80</x>
        <y>30</y>
        <width>71</width>
        <height>22</height>
@@ -294,45 +196,63 @@
      </property>
      <property name="maximum">
       <double>90.000000000000000</double>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBox">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>0</y>
+       <width>141</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Use the canvas limits</string>
      </property>
     </widget>
    </widget>
    <widget class="QGroupBox" name="depRange">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>420</y>
-      <width>171</width>
-      <height>71</height>
+      <x>250</x>
+      <y>210</y>
+      <width>91</width>
+      <height>121</height>
      </rect>
     </property>
     <property name="title">
      <string>Depth</string>
     </property>
-    <widget class="QLabel" name="label_6">
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <widget class="QDoubleSpinBox" name="maxDepthBox">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>50</y>
-       <width>31</width>
-       <height>16</height>
+       <y>90</y>
+       <width>71</width>
+       <height>22</height>
       </rect>
      </property>
-     <property name="text">
-      <string>min</string>
+     <property name="inputMethodHints">
+      <set>Qt::ImhNone</set>
      </property>
-    </widget>
-    <widget class="QLabel" name="label_7">
-     <property name="geometry">
-      <rect>
-       <x>90</x>
-       <y>50</y>
-       <width>31</width>
-       <height>16</height>
-      </rect>
+     <property name="frame">
+      <bool>false</bool>
      </property>
-     <property name="text">
-      <string>max</string>
+     <property name="buttonSymbols">
+      <enum>QAbstractSpinBox::UpDownArrows</enum>
+     </property>
+     <property name="decimals">
+      <number>4</number>
+     </property>
+     <property name="minimum">
+      <double>-1000.000000000000000</double>
+     </property>
+     <property name="maximum">
+      <double>1000.000000000000000</double>
      </property>
     </widget>
     <widget class="QDoubleSpinBox" name="minDepthBox">
@@ -363,42 +283,14 @@
       <double>1000.000000000000000</double>
      </property>
     </widget>
-    <widget class="QDoubleSpinBox" name="maxDepthBox">
-     <property name="geometry">
-      <rect>
-       <x>90</x>
-       <y>30</y>
-       <width>71</width>
-       <height>22</height>
-      </rect>
-     </property>
-     <property name="inputMethodHints">
-      <set>Qt::ImhNone</set>
-     </property>
-     <property name="frame">
-      <bool>false</bool>
-     </property>
-     <property name="buttonSymbols">
-      <enum>QAbstractSpinBox::UpDownArrows</enum>
-     </property>
-     <property name="decimals">
-      <number>4</number>
-     </property>
-     <property name="minimum">
-      <double>-1000.000000000000000</double>
-     </property>
-     <property name="maximum">
-      <double>1000.000000000000000</double>
-     </property>
-    </widget>
    </widget>
    <widget class="QListWidget" name="variableList">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>290</y>
-      <width>151</width>
-      <height>201</height>
+      <x>10</x>
+      <y>340</y>
+      <width>331</width>
+      <height>121</height>
      </rect>
     </property>
     <property name="focusPolicy">
@@ -439,20 +331,20 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
+      <y>0</y>
       <width>331</width>
-      <height>91</height>
+      <height>61</height>
      </rect>
     </property>
     <property name="title">
-     <string>Dataset Configuration File (JSON)</string>
+     <string>Datasets configuration file (JSON)</string>
     </property>
     <widget class="QLineEdit" name="jsonLineEdit">
      <property name="geometry">
       <rect>
        <x>50</x>
        <y>30</y>
-       <width>271</width>
+       <width>221</width>
        <height>22</height>
       </rect>
      </property>
@@ -473,14 +365,14 @@
     <widget class="QPushButton" name="jsonSelectButton">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>60</y>
-       <width>93</width>
-       <height>28</height>
+       <x>280</x>
+       <y>30</y>
+       <width>41</width>
+       <height>21</height>
       </rect>
      </property>
      <property name="text">
-      <string>Select</string>
+      <string>Load</string>
      </property>
     </widget>
    </widget>
@@ -488,8 +380,8 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>500</y>
-      <width>341</width>
+      <y>470</y>
+      <width>331</width>
       <height>61</height>
      </rect>
     </property>
@@ -501,7 +393,7 @@
       <rect>
        <x>50</x>
        <y>30</y>
-       <width>281</width>
+       <width>271</width>
        <height>21</height>
       </rect>
      </property>
@@ -533,13 +425,13 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>110</y>
+      <y>70</y>
       <width>331</width>
       <height>61</height>
      </rect>
     </property>
     <property name="title">
-     <string>Datasets</string>
+     <string>Dataset</string>
     </property>
     <widget class="QComboBox" name="comboBox">
      <property name="geometry">
@@ -555,18 +447,35 @@
    <widget class="QPushButton" name="OKButton">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>570</y>
+      <x>140</x>
+      <y>540</y>
       <width>93</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
-     <string>OK</string>
+     <string>Plot</string>
     </property>
    </widget>
   </widget>
  </widget>
  <resources/>
  <connections/>
+ <designerdata>
+  <property name="gridDeltaX">
+   <number>10</number>
+  </property>
+  <property name="gridDeltaY">
+   <number>10</number>
+  </property>
+  <property name="gridSnapX">
+   <bool>true</bool>
+  </property>
+  <property name="gridSnapY">
+   <bool>true</bool>
+  </property>
+  <property name="gridVisible">
+   <bool>true</bool>
+  </property>
+ </designerdata>
 </ui>
